--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -38,6 +38,15 @@
       "commitMessageExtra": "to {{#if isSingleVersion}}v{{{newVersion}}}{{else}}{{{newValue}}}{{/if}}",
       "matchUpdateTypes": ["major", "minor", "patch", "digest"],
     },
+    {
+      "datasources": ["docker"],
+      "enabled": true,
+      "pinDigests": true,
+      "automerge": true,
+      "separateMinorPatch": true,
+      "commitMessageTopic": "container image {{depName}}",
+      "commitMessageExtra": "to {{#if isSingleVersion}}v{{{newVersion}}}{{else}}{{{newValue}}}{{/if}}",
+    },
     // Setup datasources for github actions
     {
       "matchManagers": ["github-actions"],
