--- a/charts/incubator/invidious/values.yaml
+++ b/charts/incubator/invidious/values.yaml
@@ -84,32 +84,33 @@ invidious:
       comments: []
       player_style: invidious
       related_videos: true
-  local: false
-  show_nick: true
-  automatic_instance_redirect: false
-  extend_desc: false
 
-video_player_behavior:
-  autoplay: false
-  continue: false
-  continue_autoplay: true
-  listen: false
-  video_loop: false
+    # TODO:
+    miscellaneous:
+      local: false
+      show_nick: true
+      automatic_instance_redirect: false
+      extend_desc: false
 
-video_playback_settings:
-  quality: hd720
-  quality_dash: auto
-  speed: 1.0
-  volume: 100
-  vr_mode: true
+    video_player_behavior:
+      autoplay: false
+      continue: false
+      continue_autoplay: true
+      listen: false
+      video_loop: false
 
-subscription_feed:
-  latest_only: false
-  notifications_only: false
-  unseen_only: false
-  sort: published
+    video_playback_settings:
+      quality: hd720
+      quality_dash: auto
+      speed: 1.0
+      volume: 100
+      vr_mode: true
 
-
+    subscription_feed:
+      latest_only: false
+      notifications_only: false
+      unseen_only: false
+      sort: published
 
 envFrom:
   - secretRef:
