SMTP username and password not required for support SMTP relays
I have changed the requiredness of the SMTP settings password and username field, to not required. This is necessary to support SMTP relays without authentication. (Like the Exchange Online one I’am using with ip verification)

Signed-off-by: StanMar-bit <84271654+StanMar-bit@users.noreply.github.com>

--- a/charts/stable/authelia/questions.yaml
+++ b/charts/stable/authelia/questions.yaml
@@ -509,13 +509,13 @@ questions:
                       schema:
                         type: string
                         default: ""
-                        required: true
+                        required: false
                     - variable: plain_password
                       label: "Password"
                       schema:
                         type: string
                         default: ""
-                        required: true
+                        required: false
                     - variable: sender
                       label: "Sender"
                       schema:
